--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -14,4 +14,6 @@ SnapAxis=Y
 +SnapLayers=(Name="Default",Depth=0.000000)
 +SnapLayers=(Name="Background",Depth=-400.000000)
 
+[/Script/Paper2DEditor.PaperImporterSettings]
+DefaultPixelsPerUnrealUnit=0.700000
 
