Big update: Gamepad as mouse, clickable items ++
Colorbox now fades down to 0.2 alpha insted of 0.0 (invisible).
Fixed a bug with enemy bait updating, there is stil a bug in there.
Items can now be clickable, which means that they can be picked up again by p2.
Items are now transparent when grabbed.
Items now have the correct collision responses when grabbed and placed.
Changed damage value of spikes from 3 to 4 to make it a 3 hit kill.
Made bg music loop.
Added big level, level9

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScroller/Levels/Level1
+EditorStartupMap=/Game/2DSideScroller/Levels/Level9
 LocalMapOptions=
 TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/2DSideScroller/Levels/Level0
+GameDefaultMap=/Game/2DSideScroller/Levels/Level5
 ServerDefaultMap=/Game/2DSideScroller/Maps/2DSideScrollerExampleMap
 GlobalDefaultGameMode=/Game/2DSideScroller/Blueprints/Gamemode_BP.Gamemode_BP_C
 GlobalDefaultServerGameMode=None
@@ -20,7 +20,7 @@ GlobalDefaultServerGameMode=None
 +ActiveClassRedirects=(OldClassName="TP_2DSideScrollerCharacter",NewClassName="SideScroller1Character")
 
 [/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=NavigationOnly
+RenderFocusRule=Never
 DefaultCursor=None
 TextEditBeamCursor=None
 CrosshairsCursor=None
@@ -31,6 +31,12 @@ ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
@@ -66,9 +72,3 @@ r.BasePassOutputsVelocity=False
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
