Update: project cleanup, new level and qol updates
Removed unused plugins and starter content
Added level 10
Made impulse switches unable to be disabled.
Made score value 1 instead of 50
Made springboard less springy by default
Made spikes less deadly by default

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScroller/Levels/Level9
+EditorStartupMap=/Game/2DSideScroller/Levels/Level6
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/2DSideScroller/Levels/Level5
+GameDefaultMap=/Game/2DSideScroller/Levels/Level6
 ServerDefaultMap=/Game/2DSideScroller/Maps/2DSideScrollerExampleMap
 GlobalDefaultGameMode=/Game/2DSideScroller/Blueprints/Gamemode_BP.Gamemode_BP_C
 GlobalDefaultServerGameMode=None
@@ -21,7 +21,7 @@ GlobalDefaultServerGameMode=None
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
-DefaultCursor=None
+DefaultCursor=/Game/2DSideScroller/Blueprints/Empty.Empty_C
 TextEditBeamCursor=None
 CrosshairsCursor=None
 GrabHandCursor=None
