Renamed GameMode and Character files
Renamed SideScroller1Character > MainCharacter
Renamed SideScroller1GameMode > MainGameMode
Renamed function TakeDamage > DamageCharacter in MainCharacter to avoid conflict

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,6 +18,8 @@ GlobalDefaultServerGameMode=None
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScroller",NewGameName="/Script/SideScroller1")
 +ActiveClassRedirects=(OldClassName="TP_2DSideScrollerGameMode",NewClassName="SideScroller1GameMode")
 +ActiveClassRedirects=(OldClassName="TP_2DSideScrollerCharacter",NewClassName="SideScroller1Character")
++ActiveClassRedirects=(OldClassName="SideScroller1GameMode",NewClassName="MainGameMode")
++ActiveClassRedirects=(OldClassName="SideScroller1Character",NewClassName="MainCharacter")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
