Fixes to the coin
Renamed PickupItem to Coin
Fixed the HUD to properly display the coin and value

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ GlobalDefaultServerGameMode=None
 +ActiveClassRedirects=(OldClassName="TP_2DSideScrollerCharacter",NewClassName="SideScroller1Character")
 +ActiveClassRedirects=(OldClassName="SideScroller1GameMode",NewClassName="MainGameMode")
 +ActiveClassRedirects=(OldClassName="SideScroller1Character",NewClassName="MainCharacter")
++ActiveClassRedirects=(OldClassName="PickupItem",NewClassName="Coin")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
