Renamed Blueprints, added shortcut for screenshot
Renamed MySideScroller1Character to AlienCharacter
Renamed Gamemode_BP to GameModeBP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/2DSideScroller/Levels/Level6
 ServerDefaultMap=/Game/2DSideScroller/Maps/2DSideScrollerExampleMap
-GlobalDefaultGameMode=/Game/2DSideScroller/Blueprints/Gamemode_BP.Gamemode_BP_C
+GlobalDefaultGameMode=/Game/2DSideScroller/Blueprints/GameModeBP.GameModeBP_C
 GlobalDefaultServerGameMode=None
 
 
